<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:id="@+id/loginParent"
    tools:context="com.example.storytellerr.evhack.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/user_single_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="5dp"
                android:transitionName="imageTransition"
                android:src="@drawable/main" />
        <!--
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="120dp"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/main"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />
        -->

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />



            <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />


            <!-- Login Button -->

            <Button
                android:id="@+id/btn_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@color/colorAccent"
                android:text="@string/btn_login"
                android:textColor="@android:color/black" />
            <Button
                android:id="@+id/btn_reset_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@null"
                android:text="@string/btn_forgot_password"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent" />

            <!-- Link to Login Screen -->

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                >
            <Button
                android:id="@+id/btn_signupuser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:layout_marginRight="10dp"
                android:background="@color/colorAccent"
                android:text="@string/btn_link_to_registeruser"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textSize="15dp"
                android:layout_weight="1"
                tools:ignore="SpUsage" />

                <Button
                    android:id="@+id/btn_signupshop"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dip"
                    android:layout_marginRight="10dp"
                    android:background="@color/colorAccent"
                    android:text="@string/btn_link_to_registershop"
                    android:textAllCaps="false"
                    android:textColor="@android:color/black"
                    android:textSize="15dp"
                    tools:ignore="SpUsage"
                    android:layout_weight="1"/>

            </LinearLayout>
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center|bottom"
                android:visibility="gone"
                tools:layout_editor_absoluteX="142dp"
                tools:layout_editor_absoluteY="162dp"
                tools:ignore="MissingConstraints" />

        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>